fix for bugreport: #21506 'sort by' while in append/link file browser causes files to disappear

- issue was that the objects were still filtered
- temporary fix until refactoring of the append/link integration